<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_connect">

    <fragment
        android:id="@+id/navigation_connect"
        android:name="com.trichain.wifishare.fragment.ConnectFragment"
        android:label="@string/title_connect"
        tools:layout="@layout/fragment_discover" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.trichain.wifishare.fragment.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_connect" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.trichain.wifishare.fragment.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

</navigation>